added monitoring